--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+	compile 'com.google.apis:google-api-services-youtube:v3-rev20210915-1.32.1' // YouTube API
 }
 
 tasks.named('test') {
