Feat: "YouTuBe Video API 기능 구현"
YouTuBe Video List 50개 가져옴.

--- a/.gitignore
+++ b/.gitignore
@@ -166,4 +166,5 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.toptal.com/developers/gitignore/api/java,intellij,windows
+# application properties
+*.yml
